trunk/Archive2/aa/27856b27d12b4c/output
g++ (GCC) 5.1.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'int main()':
main.cpp:3:66: error: expected primary-expression before ')' token
 #define FOO(...) do { static thread_local BAR bar(0,##__VA_ARGS__); } while (false)
                                                                  ^
main.cpp:11:5: note: in expansion of macro 'FOO'
     FOO();
     ^
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:3:52: warning: token pasting of ',' and __VA_ARGS__ is a GNU extension [-Wgnu-zero-variadic-macro-arguments]
#define FOO(...) do { static thread_local BAR bar(0,##__VA_ARGS__); } while (false)
                                                   ^
1 warning generated.
 NUM_ARGS="1"
